--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -39,3 +39,37 @@
 .description {
   width: 315px;
 }
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  position: relative;
+  z-index: 1001;
+}
+
+.photo {
+  background: white;
+  padding: 5px;
+  max-width: fit-content;
+  max-height: fit-content;
+}
+
+.photo-container {
+  p {
+    font-size: 16px;
+    text-align: center;
+    margin-top: 10px;
+  }
+}
